fix home page project section spacing issue

--- a/css/style.css
+++ b/css/style.css
@@ -440,12 +440,6 @@
       margin-top: 1.5rem;
       margin-bottom: 4.5rem;
     }
-    h4 {
-      color: #66B6A7;
-      font-size: 2.5rem;
-      font-weight: 600;
-      padding-bottom: 1.5rem;
-    }
 
       /* PROJECT 1 */
       h3 {
@@ -465,13 +459,14 @@
       }
 
       /* HOME PAGE */
-      p, h4, h5 {
-        margin-top: 1.5rem;
+      p, h5 {
+        margin-top: 1.8rem;
       }
       h4 {
         color: #66B6A7;
         font-size: 2.4rem;
         font-weight: bold;
+        margin-top: 3.4rem;
       }
       h5 {
         color: #B66675;
